04/08/19
  -Return the raw bytes when a UDT is read, added example
  -Update install documentation

03/13/19
  -Update for more consistant catching of errors, formatting

03/07/19
  -Restructured project, added setup.py for install

02/10/19
  -Check status before parsing tag list packets

01/31/19
  -GetTagList gets UDT names so the tag list can contain the name of the data types
  -Added more examples
  -Upped revision and year

01/07/19
  -Another fix for dealing with bool arrays
  
12/29/18
  -Make sure ProductName is str type
  -Removed example.py, added examples directory
  
12/28/18
  -Make sure TagName is str type

12/20/18
  -Fix for reading BOOL's in an array

12/13/18
  -Added GetModuleProperties()

12/10/18
  -Check status of ForwardOpen rather than assume that it was successful
  -Allow users to provide the data type to eliminate the initial read

12/01/18
  -Merged pull request #31 from kodaman2
  
08/28/18
  -Reading a list of tags can now be done with Read(), see README for example
  
08/27/18
  -Added Python3 support
  
08/24/18
  -getBytes returns the status as well as the packet data

08/23/18
  -Connection serial number now generated in ForwardOpen

07/21/18
  -Fixed bools that are part of an array with MultiRead. Ex MyBool[0]

07/18/18
  -Fixed reading bits of a word with MultiRead.  Ex: DintTag.0

06/03/18
  -Fixed issues handling CIP error codes
  -Fixed issue when mixing Read with MultiRead
  
04/08/18
  -Increased default socket timeout

10/23/17
  -Raise error for unsupported features

10/06/17
  -Added Micro8xx support
  -Cleaned up formatting of lgxDevice.py
  
10/05/17
  -Added array writing
  -Forward Open/Close cleanup

09/29/17
  -Rewrote reply parser to handle bit/bool arrays

06/06/17
  -Specify max timeout when discovering devices
  
06/04/17
  -Fixed multiread not dealing with strings properly
  
03/21/17
  -Fixed GetTagList() appending program scoped tags

03/17/17
  -Fixed GetTagList() appending every time it is called
  