@@ -1,6 +1,7 @@
 04/08/19
   -Return the raw bytes when a UDT is read, added example
   -Update install documentation
+  -Allow passing date type when multi-reading for faster reading
 
 03/13/19
   -Update for more consistant catching of errors, formatting
